[package]
name = "public_phone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
clap = { version = "4.5.1", features = ["derive"] }

tokio = {version = "1.36.0", features = [ "net", "sync", "rt-multi-thread", "macros", "time"]}
tokio-stream = "0.1.15"
tokio-io = "0.2.0-alpha.6"
tokio-util = { version = "0.7.10", features = ["codec", "default"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "fmt"] }

serde = "1.0.197"
serde_derive = "1.0.197"
byteorder = "1.5.0"
bincode = "1.3.3"
bytes = "1.4.12"
futures = "0.3.30"